Fixed bug with whitespace.

--- a/src/.styles/ytcenter-styles-general.css
+++ b/src/.styles/ytcenter-styles-general.css
@@ -995,6 +995,6 @@ body > #page {
   filter: alpha(opacity=75) !important;
 }
 
-.branded-page-v2-primary-col {
+/*.branded-page-v2-primary-col {
   overflow: visible!important;
-}
+}*/
